# dakb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
dakb/: __init__.py
dakb/admin/: __init__.py  api.py  websocket.py  whiteboard_dashboard.py
dakb/agentic_core/: __init__.py  envelope.py  exceptions.py  registry.py  remediation.py
dakb/bridge/: __init__.py  launcher.py  models.py  queue.py  routes.py  session_bridge.py  ws_handler.py
dakb/bridge/Client_SDK/: pyproject.toml
dakb/bridge/Client_SDK/bridge_client_sdk/: __init__.py  agent_relay.py  client_launcher.py  client_runner.py  test_fire.py  watcher_daemon.py
dakb/bridge/Client_SDK/bridge_client_sdk/config/: watcher_config.json
dakb/bridge/Client_SDK/bridge_client_sdk/hooks/: __init__.py  cleanup_hook.py  event_hook.py  inbox_hook.py  test_hook.py
dakb/bridge/Client_SDK/tests/: test_hooks.py  test_integration.py  test_watcher.py
dakb/chat_bridge/: __init__.py  outbound_consumer.py  registry.py  router.py  schemas.py  session_manager.py
dakb/cli/: __init__.py  main.py
dakb/db/: __init__.py  admin_schemas.py  collections.py  (+5 more)
docker/: .env.example  Dockerfile  Dockerfile.embedding  docker-compose.yml
docs/: COMMUNITY_POST.md  CONTEXT_MANAGEMENT_GUIDE.md  quickstart.md
scripts/: github_publish.sh  health_check.py  start_dakb.sh  stop_dakb.sh
tests/: __init__.py  test_basic.py
(+71 files in other folders)
