[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dakb-bridge-sdk"
version = "0.1.0"
description = "DAKB Session Bridge Client SDK — hooks, launcher, watcher daemon for agent chat communication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "DAKB Contributors" },
]
keywords = ["dakb", "bridge", "agent", "sdk", "session-bridge", "watcher"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis>=5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/dakb-project/dakb"
Repository = "https://github.com/dakb-project/dakb"

[project.scripts]
bridge-watcher = "bridge_client_sdk.watcher_daemon:main"
bridge-launcher = "bridge_client_sdk.client_launcher:main"
bridge-test-fire = "bridge_client_sdk.test_fire:main"
bridge-relay = "bridge_client_sdk.agent_relay:main"

[tool.setuptools.packages.find]
include = ["bridge_client_sdk*"]
